Fix lost masks when opening a document with two root inactive selection masks

BUG:454960